<resources>
    <string name="app_name">The Rest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_views_slider">ViewsSliderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="previous">PREVIOUS</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Pasta!</string>
    <string name="slide_1_desc">Our Pasta is the best in town. \nYou will never forget out maccaroni</string>

    <string name="slide_2_title">Reservation</string>
    <string name="slide_2_desc">Reservations available 24 hours a day!</string>

    <string name="slide_3_title">For Family</string>
    <string name="slide_3_desc">Large families are welcome \n50% discount</string>

    <string name="slide_4_title">Delicious chicken</string>
    <string name="slide_4_desc">A thousand different recipes for cooking chicken for all refined tastes</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="slides_ended">All slides ended. Launch your activity here!</string>
    <string name="change_orientation">Change Orientation</string>
    <string name="rotate">Rotate</string>
    <string name="title_fragment_slider">The Rest</string>
    <string name="anti_clock_spin">Anti Clock</string>
    <string name="clock_spin">Clock</string>
    <string name="cube_in_depth">Cube 1</string>
    <string name="cube_in_rotate">Cube 2</string>
    <string name="cube_in_scaling">Cube 3</string>
    <string name="cube_out_depth">Cube 4</string>
    <string name="cube_out_rotate">Cube 5</string>
    <string name="cube_out_scaling">Cube 6</string>
    <string name="depth_page">Depth Page</string>
    <string name="depth">Depth</string>
    <string name="fade_out">Fade Out</string>
    <string name="fan">Fan</string>
    <string name="fidget_spin">"Fidget Spin "</string>
    <string name="gate">"Gate "</string>
    <string name="hinge">Hinge</string>
    <string name="horizontal_flip">Horizontal Flip</string>
    <string name="pop">Pop</string>
    <string name="simple_transformation">Simple</string>
    <string name="spinner_transformation">Spinner</string>
    <string name="toss_transformation">Toss</string>
    <string name="vertical_flip">Vertical Flip</string>
    <string name="vertical_shut">Vertical Shut</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="reservation">Reservation</string>
    <string name="first_dishes">First Dishes</string>
    <string name="chicken">Chicken</string>
    <string name="views_slider">Views Slider</string>
    <string name="fragments_slider">Fragments Slider</string>
    <string name="fade_out_vert">Vertical Fade Out</string>
</resources>
